# SimNautica

./: README.md
cpp/: .clang-format  CMakeLists.txt  Farm.cpp  Farm.h  SimObject.cpp  Structure.cpp  Structure.h  Vector2f.cpp  Vector2f.h  main2.cpp
java/: build.gradle  settings.gradle
java/src/main/java/: Farm.java  Main.java  SimObject.java  Structure.java  TownHall.java  Vector2f.java
